solc_mutator_ossfuzz_seed_corpus/test_sol/test_d7def60a4fad65ba4bad2e270d0c4ed89f14bb43c45143e52f0bfa0879c1a414_storage_function_sol.sol
function f(uint x) returns (uint) {
	return x ** 2 + msg.value;
}
contract C {
	function g(uint x) internal payable returns (uint) {
		return x ** 2 + msg.value;
	}
}
// ----
// TypeError 5587: (80-164): "internal" and "private" functions cannot be payable.
